add league endpoint
